--- a/catalogo.html
+++ b/catalogo.html
@@ -19,7 +19,7 @@
 <!-- 🔹 Open Graph (Facebook, WhatsApp, LinkedIn, etc.) -->
 <meta property="og:title" content="AVAR Joyas | Bisutería elegante y moderna hecha para brillar cada día">
 <meta property="og:description" content="Descubre la elegancia en lo simple con AVAR Joyas. Collares, aretes, pulseras, anillos y tobilleras diseñadas para resaltar tu estilo único con el brillo del lujo artesanal.">
-<meta property="og:image" content="https://avarjoyas.pages.dev/img/LogoSEO.png">
+<meta property="og:image" content="https://res.cloudinary.com/dt2qovj9c/image/upload/v1763085229/LogoSEO_v8wqgl.png">
 <meta property="og:url" content="https://avarjoyas.pages.dev/">
 <meta property="og:type" content="website">
 <meta property="og:locale" content="es_ES">
@@ -28,10 +28,10 @@
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="AVAR Joyas | Bisutería elegante y moderna hecha para brillar cada día">
 <meta name="twitter:description" content="Descubre la elegancia en lo simple con AVAR Joyas. Collares, aretes, pulseras, anillos y tobilleras diseñadas para resaltar tu estilo único con el brillo del lujo artesanal.">
-<meta name="twitter:image" content="https://avarjoyas.pages.dev/img/LogoSEO.png">
+<meta name="twitter:image" content="https://res.cloudinary.com/dt2qovj9c/image/upload/v1763085229/LogoSEO_v8wqgl.png">
 
 <!-- 🔹 Favicon -->
-<link rel="icon" type="image/png" href="img/favicon.jpeg">
+<link rel="icon" type="image/png" href="https://res.cloudinary.com/dt2qovj9c/image/upload/v1763085225/favicon_ru88ht.jpg">
 
 <!-- 🔹 Rendimiento -->
 <link rel="preload" href="styles.css" as="style">
@@ -41,7 +41,7 @@
 <!-- 🔹 Google SEO -->
 <meta itemprop="name" content="AVAR Joyas">
 <meta itemprop="description" content="Bisutería elegante y moderna hecha para brillar cada día.">
-<meta itemprop="image" content="https://avarjoyas.pages.dev/img/LogoSEO.png">
+<meta itemprop="image" content="https://res.cloudinary.com/dt2qovj9c/image/upload/v1763085229/LogoSEO_v8wqgl.png">
 
 <meta name="google-site-verification" content="google921def2cbc0c49fd.html" />
 
@@ -55,8 +55,10 @@
   <header>
     <div class="header-content">
       <div class="logo-container">
-        <img src="img/Logo.jpeg" alt="Logo AVAR Joyas" class="logo">
+      <div class="brand">
+       <img src="https://res.cloudinary.com/dt2qovj9c/image/upload/v1763085225/Logo_zbkf1y.jpg" class="logo">
         <h1 class="nombre-tienda">AVAR JOYAS</h1>
+      </div>
       </div>
 
       <div class="menu-toggle" id="menuToggle">☰</div>
