--- a/index.html
+++ b/index.html
@@ -55,8 +55,10 @@
   <header>
     <div class="header-content">
       <div class="logo-container">
-        <img src="https://res.cloudinary.com/dt2qovj9c/image/upload/v1763085225/Logo_zbkf1y.jpg" alt="Logo AVAR Joyas" class="logo">
+      <div class="brand">
+       <img src="https://res.cloudinary.com/dt2qovj9c/image/upload/v1763085225/Logo_zbkf1y.jpg" class="logo">
         <h1 class="nombre-tienda">AVAR JOYAS</h1>
+      </div>
       </div>
 
       <div class="menu-toggle" id="menuToggle">☰</div>
